01-docker-images/solution/k8s/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  selector:
    matchLabels:
      app: rails-frontend
  template:
    metadata:
      labels:
        app: rails-frontend
    spec:
      containers:
      - name: rails-frontend
        image: eu.gcr.io/kubernetes-security-workshop/rails-without-cve
        ports:
        - containerPort: 3000
