01-docker-images/solution/k8s/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rails-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /rails
        backend:
          serviceName: rails-frontend
          servicePort: 3000
